refactor: 下方標籤改輕量直條分隔；左/右改為上一個／下一個「不同主題」非相鄰頁
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -1499,24 +1499,34 @@
                             </span>
                         </div>
 
-                        {/* 右側：左右按鈕、三段式標籤（上一個｜當前｜下一個）、頁碼 */}
+                        {/* 右側：左右按鈕、三段式標籤（上一個主題｜當前主題｜下一個主題）、頁碼 */}
                         <div className="flex items-center gap-3 md:gap-5">
                             <div className="flex items-center gap-2">
                                 <button onClick={prevSlide}
                                     className="p-1.5 md:p-2 rounded-full transition-all transform hover:scale-105 text-slate-600 bg-slate-100 hover:bg-slate-200 hover:text-slate-900 active:bg-slate-300">
                                     <IconArrowLeft />
                                 </button>
-                                <div className="flex items-stretch rounded-lg border border-slate-200 bg-slate-50 overflow-hidden min-w-0 max-w-[16rem] md:max-w-[22rem]">
-                                    <span className="flex-1 min-w-0 truncate text-xs md:text-sm text-slate-400 px-2 py-1.5 border-r border-slate-200 text-center" title={currentSlide > 0 ? (slides[currentSlide - 1].tag || slides[currentSlide - 1].title) : ''}>
-                                        {currentSlide > 0 ? (slides[currentSlide - 1].tag || slides[currentSlide - 1].title || '—') : '—'}
-                                    </span>
-                                    <span className="flex-1 min-w-0 truncate text-xs md:text-sm font-semibold text-amber-600 bg-amber-50 px-2 py-1.5 border-r border-amber-200 text-center" title={slides[currentSlide].tag || slides[currentSlide].title}>
-                                        {slides[currentSlide].tag || slides[currentSlide].title || '—'}
-                                    </span>
-                                    <span className="flex-1 min-w-0 truncate text-xs md:text-sm text-slate-400 px-2 py-1.5 text-center" title={currentSlide < slides.length - 1 ? (slides[currentSlide + 1].tag || slides[currentSlide + 1].title) : ''}>
-                                        {currentSlide < slides.length - 1 ? (slides[currentSlide + 1].tag || slides[currentSlide + 1].title || '—') : '—'}
-                                    </span>
-                                </div>
+                                {(() => {
+                                    const currTag = slides[currentSlide].tag || slides[currentSlide].title || '';
+                                    let prevSectionTag = '—', nextSectionTag = '—';
+                                    for (let i = currentSlide - 1; i >= 0; i--) {
+                                        const t = slides[i].tag || slides[i].title || '';
+                                        if (t && t !== currTag) { prevSectionTag = t; break; }
+                                    }
+                                    for (let i = currentSlide + 1; i < slides.length; i++) {
+                                        const t = slides[i].tag || slides[i].title || '';
+                                        if (t && t !== currTag) { nextSectionTag = t; break; }
+                                    }
+                                    return (
+                                        <div className="flex items-center gap-1.5 min-w-0 max-w-[16rem] md:max-w-[22rem] text-xs md:text-sm">
+                                            <span className="min-w-0 truncate text-slate-400 text-center" title={prevSectionTag}>{prevSectionTag}</span>
+                                            <span className="flex-shrink-0 w-px h-3.5 bg-slate-300" aria-hidden="true" />
+                                            <span className="min-w-0 truncate text-amber-600 font-semibold text-center" title={currTag}>{currTag || '—'}</span>
+                                            <span className="flex-shrink-0 w-px h-3.5 bg-slate-300" aria-hidden="true" />
+                                            <span className="min-w-0 truncate text-slate-400 text-center" title={nextSectionTag}>{nextSectionTag}</span>
+                                        </div>
+                                    );
+                                })()}
                                 <button onClick={nextSlide}
                                     className="p-1.5 md:p-2 rounded-full transition-all transform hover:scale-105 text-slate-600 bg-slate-100 hover:bg-slate-200 hover:text-slate-900 active:bg-slate-300">
                                     <IconArrowRight />
