refactor: 第2-6頁標籤改為自我介紹；第8-13頁入門比特幣；第14-22頁發錢實作；第23頁標題改為中場下課
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             {
                 id: 2,
                 layout: 'detail',
-                tag: "講師介紹",
+                tag: "自我介紹",
                 title: "許明恩",
                 content: (
                     <div className="flex flex-col md:flex-row gap-6 md:gap-10 h-full justify-center items-center">
@@ -130,7 +130,7 @@
             {
                 id: 3,
                 layout: 'split',
-                tag: "我的故事",
+                tag: "自我介紹",
                 title: "我也不信",
                 leftClasses: "md:w-[55%] flex-shrink-0",
                 rightClasses: "md:w-[45%]",
@@ -164,7 +164,7 @@
             {
                 id: 4,
                 layout: 'detail',
-                tag: "我的故事",
+                tag: "自我介紹",
                 title: "挖礦付電費",
                 content: (
                     <div className="flex flex-col items-center justify-center h-full w-full py-8 md:py-12">
@@ -236,7 +236,7 @@
             {
                 id: 5,
                 layout: 'split',
-                tag: "轉捩點",
+                tag: "自我介紹",
                 title: "比特幣白皮書",
                 leftClasses: "md:w-[60%] flex-shrink-0",
                 rightClasses: "md:w-[40%]",
@@ -275,7 +275,7 @@
             {
                 id: 6,
                 layout: 'detail',
-                tag: "全職工作",
+                tag: "自我介紹",
                 title: "區塊勢",
                 content: (
                     <div className="grid grid-cols-1 md:grid-cols-2 gap-6 md:gap-10 h-full items-center">
@@ -323,12 +323,14 @@
             {
                 id: 8,
                 layout: 'section',
+                tag: "入門比特幣",
                 title: "入門比特幣",
                 subtitle: "從價值載體到點對點現金"
             },
             {
                 id: 9,
                 layout: 'split',
+                tag: "入門比特幣",
                 title: "價值載體數位化",
                 leftContent: (
                     <div className="w-full max-w-5xl mx-auto">
@@ -485,6 +487,7 @@
             {
                 id: 13,
                 layout: 'split',
+                tag: "入門比特幣",
                 title: "不靠中間人的資產轉移",
                 leftContent: (
                     <div className="flex flex-col items-center justify-center h-full">
@@ -504,6 +507,7 @@
             {
                 id: 14,
                 layout: 'section',
+                tag: "發錢實作",
                 title: "發錢最快",
                 subtitle: "實際操作，親身感受加密貨幣如何運作"
             },
@@ -654,7 +658,7 @@
             {
                 id: 23,
                 layout: 'break',
-                title: "中場下課時間",
+                title: "中場下課",
                 slidoUrl: "https://app.sli.do/event/v5E2ZdcCzhE9FHG2EfHh7z"
             },
             {
