feat: 第42頁後新增午餐時間、第51頁後新增中場休息（同第23頁 break 格式）
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -943,6 +943,12 @@
                 )
             },
             {
+                id: 70,
+                layout: 'break',
+                title: "午餐時間",
+                slidoUrl: "https://app.sli.do/event/v5E2ZdcCzhE9FHG2EfHh7z"
+            },
+            {
                 id: 43,
                 layout: 'section',
                 title: "鏈上的金融應用",
@@ -1058,6 +1064,12 @@
                         <img src="https://i.urusai.cc/eWAwk.png" alt="不會輸的樂透彩" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
                     </div>
                 )
+            },
+            {
+                id: 71,
+                layout: 'break',
+                title: "中場休息",
+                slidoUrl: "https://app.sli.do/event/v5E2ZdcCzhE9FHG2EfHh7z"
             },
             {
                 id: 52,
