fix: 第45頁美元穩定幣+Ydjmk、第46頁USDC的美元儲備+6e72U、第47頁各種美元穩定幣+0TEyp
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -972,10 +972,10 @@
                 id: 45,
                 layout: 'detail',
                 tag: "鏈上的金融應用",
-                title: "USDC的美元儲備",
+                title: "美元穩定幣",
                 content: (
                     <div className="flex items-center justify-center h-full min-h-0 p-4">
-                        <img src="https://i.urusai.cc/Ydjmk.png" alt="USDC的美元儲備" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                        <img src="https://i.urusai.cc/Ydjmk.png" alt="美元穩定幣" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
                     </div>
                 )
             },
@@ -983,10 +983,10 @@
                 id: 72,
                 layout: 'detail',
                 tag: "鏈上的金融應用",
-                title: "各種美元穩定幣",
+                title: "USDC的美元儲備",
                 content: (
                     <div className="flex items-center justify-center h-full min-h-0 p-4">
-                        <img src="https://i.urusai.cc/6e72U.png" alt="各種美元穩定幣" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                        <img src="https://i.urusai.cc/6e72U.png" alt="USDC的美元儲備" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
                     </div>
                 )
             },
@@ -994,15 +994,10 @@
                 id: 46,
                 layout: 'detail',
                 tag: "鏈上的金融應用",
-                title: "穩定幣美元價差",
+                title: "各種美元穩定幣",
                 content: (
-                    <div className="flex flex-col md:flex-row items-center justify-center gap-4 md:gap-8 h-full min-h-0 p-4">
-                        <div className="flex-1 min-h-0 w-full flex items-center justify-center">
-                            <img src="https://i.urusai.cc/b5IoO.png" alt="穩定幣美元價差套利 1" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
-                        </div>
-                        <div className="flex-1 min-h-0 w-full flex items-center justify-center">
-                            <img src="https://i.urusai.cc/pmH4u.png" alt="穩定幣美元價差套利 2" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
-                        </div>
+                    <div className="flex items-center justify-center h-full min-h-0 p-4">
+                        <img src="https://i.urusai.cc/0TEyp.png" alt="各種美元穩定幣" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
                     </div>
                 )
             },
