fix: 重排簡報 id 46–50，頁碼連續 1–72
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -962,7 +962,7 @@
                 content: (
                     <div className="flex flex-col items-center justify-center h-full min-h-0 p-4">
                         <div className="flex-1 min-h-0 w-full flex items-center justify-center">
-                            <img src="https://i.urusai.cc/0TEyp.png" alt="美元穩定幣" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                            <img src="https://i.urusai.cc/Ydjmk.png" alt="美元穩定幣" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
                         </div>
                         <p className="text-center text-slate-600 text-lg md:text-xl font-medium mt-4 flex-shrink-0">美元放銀行，穩定幣放鏈上，一比一。</p>
                     </div>
@@ -970,17 +970,6 @@
             },
             {
                 id: 46,
-                layout: 'detail',
-                tag: "鏈上的金融應用",
-                title: "美元穩定幣",
-                content: (
-                    <div className="flex items-center justify-center h-full min-h-0 p-4">
-                        <img src="https://i.urusai.cc/Ydjmk.png" alt="美元穩定幣" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
-                    </div>
-                )
-            },
-            {
-                id: 47,
                 layout: 'detail',
                 tag: "鏈上的金融應用",
                 title: "USDC的美元儲備",
@@ -991,13 +980,29 @@
                 )
             },
             {
-                id: 48,
+                id: 47,
                 layout: 'detail',
                 tag: "鏈上的金融應用",
                 title: "各種美元穩定幣",
                 content: (
                     <div className="flex items-center justify-center h-full min-h-0 p-4">
                         <img src="https://i.urusai.cc/0TEyp.png" alt="各種美元穩定幣" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                    </div>
+                )
+            },
+            {
+                id: 48,
+                layout: 'detail',
+                tag: "鏈上的金融應用",
+                title: "美元、穩定幣價差",
+                content: (
+                    <div className="flex flex-col md:flex-row items-center justify-center gap-4 md:gap-8 h-full min-h-0 p-4">
+                        <div className="flex-1 min-h-0 w-full flex items-center justify-center">
+                            <img src="https://i.urusai.cc/b5IoO.png" alt="美元穩定幣價差 1" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                        </div>
+                        <div className="flex-1 min-h-0 w-full flex items-center justify-center">
+                            <img src="https://i.urusai.cc/pmH4u.png" alt="美元穩定幣價差 2" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                        </div>
                     </div>
                 )
             },
