feat: 第67頁標題加(2020)，新增第68頁鏈上華爾街(2026)附圖，id 72→73
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -1232,7 +1232,7 @@
                 id: 67,
                 layout: 'detail',
                 tag: "鏈上的經濟應用",
-                title: "鏈上華爾街",
+                title: "鏈上華爾街(2020)",
                 content: (
                     <div className="flex items-center justify-center h-full min-h-0 p-4">
                         <img src="https://i.urusai.cc/k5WXE.png" alt="鏈上華爾街" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
@@ -1241,6 +1241,17 @@
             },
             {
                 id: 68,
+                layout: 'detail',
+                tag: "鏈上的經濟應用",
+                title: "鏈上華爾街(2026)",
+                content: (
+                    <div className="flex items-center justify-center h-full min-h-0 p-4">
+                        <img src="https://l.urusai.cc/1yLEn.png" alt="鏈上華爾街(2026)" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                    </div>
+                )
+            },
+            {
+                id: 69,
                 layout: 'detail',
                 tag: "幣圈的銅臭味",
                 title: "穩定幣與改寫金融規則",
@@ -1359,7 +1370,7 @@
                 )
             },
             {
-                id: 72,
+                id: 73,
                 layout: 'cover',
                 title: "感謝聆聽",
                 subtitle: "填問卷，送訂閱",
