feat: 第68頁後新增「即時從券商鑄造」「Ondo Finance」兩頁附圖，id 重排至75
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -1253,6 +1253,28 @@
             {
                 id: 69,
                 layout: 'detail',
+                tag: "鏈上的經濟應用",
+                title: "即時從券商鑄造",
+                content: (
+                    <div className="flex items-center justify-center h-full min-h-0 p-4">
+                        <img src="https://l.urusai.cc/DmFJI.png" alt="即時從券商鑄造" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                    </div>
+                )
+            },
+            {
+                id: 70,
+                layout: 'detail',
+                tag: "鏈上的經濟應用",
+                title: "Ondo Finance",
+                content: (
+                    <div className="flex items-center justify-center h-full min-h-0 p-4">
+                        <img src="https://i.urusai.cc/t3754.png" alt="Ondo Finance" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                    </div>
+                )
+            },
+            {
+                id: 71,
+                layout: 'detail',
                 tag: "幣圈的銅臭味",
                 title: "穩定幣與改寫金融規則",
                 content: (
@@ -1283,7 +1305,7 @@
                 )
             },
             {
-                id: 69,
+                id: 72,
                 layout: 'detail',
                 tag: "資產代幣化",
                 title: "黃金、股票與 DeFi",
@@ -1308,7 +1330,7 @@
                 )
             },
             {
-                id: 70,
+                id: 73,
                 layout: 'detail',
                 tag: "常用工具",
                 title: "Visa 卡、錢包與跨境投資",
@@ -1335,7 +1357,7 @@
                 )
             },
             {
-                id: 71,
+                id: 74,
                 layout: 'split',
                 title: "總結與延伸閱讀",
                 leftContent: (
@@ -1370,7 +1392,7 @@
                 )
             },
             {
-                id: 73,
+                id: 75,
                 layout: 'cover',
                 title: "感謝聆聽",
                 subtitle: "填問卷，送訂閱",
