--- a/index.html
+++ b/index.html
@@ -1274,6 +1274,69 @@
             },
             {
                 id: 71,
+                layout: 'detail',
+                tag: "鏈上的經濟應用",
+                title: "夜市套圈圈",
+                content: (
+                    <div className="flex items-center justify-center h-full min-h-0 p-4">
+                        <img src="https://i.urusai.cc/Wgwgw.png" alt="夜市套圈圈" className="max-h-full max-w-full w-auto object-contain rounded-2xl border-2 border-slate-200 shadow-lg" />
+                    </div>
+                )
+            },
+            {
+                id: 72,
+                layout: 'detail',
+                tag: "",
+                title: "總結",
+                content: (
+                    <div className="flex flex-col items-center justify-center h-full py-6">
+                        <div className="w-full max-w-4xl">
+                            <div className="p-6 md:p-8 bg-white rounded-2xl border-2 border-slate-200 shadow-sm hover:border-amber-200 hover:shadow-md transition-all">
+                                <ol className="list-decimal list-inside text-lg md:text-xl text-slate-700 space-y-4">
+                                    <li>加密貨幣是數位現金</li>
+                                    <li>絕大多數人都在鏈下</li>
+                                    <li>但鏈上活動越來越多</li>
+                                </ol>
+                            </div>
+                        </div>
+                    </div>
+                )
+            },
+            {
+                id: 73,
+                layout: 'detail',
+                tag: "",
+                title: "閱讀推薦",
+                content: (
+                    <div className="flex flex-col items-center justify-center h-full py-6">
+                        <div className="w-full max-w-4xl">
+                            <div className="p-6 md:p-8 bg-white rounded-2xl border-2 border-slate-200 shadow-sm hover:border-amber-200 hover:shadow-md transition-all">
+                                <ol className="list-decimal list-inside text-lg md:text-xl text-slate-700 space-y-4">
+                                    <li>財富自由主義：金錢的多元宇宙</li>
+                                    <li>以太奇襲：一位 19 歲天才，一場數位與金融革命</li>
+                                    <li>Read Write Own：開啟 web3 新局的區塊鏈網路趨勢與潛能</li>
+                                </ol>
+                            </div>
+                        </div>
+                    </div>
+                )
+            },
+            {
+                id: 74,
+                layout: 'detail',
+                tag: "",
+                title: "回饋問卷",
+                content: (
+                    <div className="flex flex-col items-center justify-center h-full py-6 px-4">
+                        <div className="w-full max-w-2xl min-h-[280px] p-8 bg-slate-50 rounded-2xl border-2 border-dashed border-slate-300 flex flex-col items-center justify-center text-center">
+                            <p className="text-slate-500 mb-4">連結與 QR Code 放置區</p>
+                            <div className="w-40 h-40 bg-white rounded-xl border border-slate-200 flex items-center justify-center text-slate-400 text-sm">QR Code</div>
+                        </div>
+                    </div>
+                )
+            },
+            {
+                id: 75,
                 layout: 'split',
                 title: "總結與延伸閱讀",
                 leftContent: (
@@ -1308,7 +1371,7 @@
                 )
             },
             {
-                id: 72,
+                id: 76,
                 layout: 'cover',
                 title: "感謝聆聽",
                 subtitle: "填問卷，送訂閱",
