feat: 第73頁閱讀推薦三本書各附書封圖
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -1322,21 +1322,15 @@
                     <div className="flex flex-col items-center justify-center h-full py-6">
                         <div className="grid grid-cols-1 md:grid-cols-3 gap-6 md:gap-8 w-full max-w-5xl">
                             <div className="p-6 md:p-8 bg-white rounded-2xl border-2 border-slate-200 shadow-sm hover:border-amber-200 hover:shadow-md transition-all flex flex-col items-center text-center">
-                                <div className="w-14 h-14 md:w-16 md:h-16 rounded-full bg-amber-50 flex items-center justify-center mb-4">
-                                    <span className="text-2xl md:text-3xl font-bold text-amber-600">1</span>
-                                </div>
+                                <img src="https://i.urusai.cc/HGn71.png" alt="財富自由主義：金錢的多元宇宙" className="w-28 h-36 md:w-32 md:h-40 object-contain rounded-lg shadow-md mb-4" />
                                 <p className="text-slate-600 text-lg md:text-xl">財富自由主義：金錢的多元宇宙</p>
                             </div>
                             <div className="p-6 md:p-8 bg-white rounded-2xl border-2 border-slate-200 shadow-sm hover:border-amber-200 hover:shadow-md transition-all flex flex-col items-center text-center">
-                                <div className="w-14 h-14 md:w-16 md:h-16 rounded-full bg-amber-50 flex items-center justify-center mb-4">
-                                    <span className="text-2xl md:text-3xl font-bold text-amber-600">2</span>
-                                </div>
+                                <img src="https://i.urusai.cc/wg8Or.png" alt="以太奇襲" className="w-28 h-36 md:w-32 md:h-40 object-contain rounded-lg shadow-md mb-4" />
                                 <p className="text-slate-600 text-lg md:text-xl">以太奇襲：一位 19 歲天才，一場數位與金融革命</p>
                             </div>
                             <div className="p-6 md:p-8 bg-white rounded-2xl border-2 border-slate-200 shadow-sm hover:border-amber-200 hover:shadow-md transition-all flex flex-col items-center text-center">
-                                <div className="w-14 h-14 md:w-16 md:h-16 rounded-full bg-amber-50 flex items-center justify-center mb-4">
-                                    <span className="text-2xl md:text-3xl font-bold text-amber-600">3</span>
-                                </div>
+                                <img src="https://l.urusai.cc/FM81p.png" alt="Read Write Own" className="w-28 h-36 md:w-32 md:h-40 object-contain rounded-lg shadow-md mb-4" />
                                 <p className="text-slate-600 text-lg md:text-xl">Read Write Own：開啟 web3 新局的區塊鏈網路趨勢與潛能</p>
                             </div>
                         </div>
