feat: 第76頁改為感謝參與、按鈕課後群組(限時一個月)、僅留區塊勢×Dinngo
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -1361,10 +1361,9 @@
             {
                 id: 76,
                 layout: 'cover',
-                title: "感謝聆聽",
-                subtitle: "填問卷，送訂閱",
-                desc: "SurveyCake 問考 + QR code · 課程滿意度回饋",
-                footer: "區塊勢 × Dinngo | blocktrend.today"
+                title: "感謝參與",
+                buttonText: "課後群組（限時一個月）",
+                footer: "區塊勢 × Dinngo"
             }
         ];
 
@@ -1397,9 +1396,9 @@
                                     <span className="bg-amber-100 text-amber-800 py-2 px-4 rounded-full text-base md:text-lg font-bold tracking-wide uppercase">實戰特訓</span>
                                 </div>
                                 <h1 className="text-4xl md:text-7xl font-bold text-slate-900 mb-6 leading-tight max-w-5xl">{slide.title}</h1>
-                                <p className="text-xl md:text-3xl text-slate-500 mb-10 max-w-3xl leading-relaxed">{slide.subtitle}</p>
+                                {slide.subtitle && <p className="text-xl md:text-3xl text-slate-500 mb-10 max-w-3xl leading-relaxed">{slide.subtitle}</p>}
                                 <a href="info.html" target="_blank" rel="noopener noreferrer" className="inline-flex items-center gap-3 px-8 py-4 bg-amber-500 hover:bg-amber-600 text-white font-bold text-lg md:text-xl rounded-full shadow-lg transition-all hover:scale-105">
-                                    活動資訊 →
+                                    {slide.buttonText || "活動資訊 →"}
                                 </a>
                                 {slide.desc && !slide.slidoUrl && (
                                     <div className="p-6 bg-white rounded-2xl shadow-md border border-slate-100 max-w-2xl">
